# friendly-neighbor

./: CMakeLists.txt  README.md
documentation/: benchmark01.md
friendly_neighbor/: __init__.py  client.py
src/: benchmark.cpp  distance.cpp  distance.hpp  extension.cpp
tests/: test_extension.py  test_retrieval.py  test_sdk.py
